--- a/task-1/package.json
+++ b/task-1/package.json
@@ -16,7 +16,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
-    "mongoose": "^8.5.1",
+    "mongoose": "^8.5.1"
+  },
+  "devDependencies": {
+    "chai": "^5.1.1",
+    "chai-http": "^5.0.0",
+    "mocha": "^10.7.0",
     "nodemon": "^3.1.4"
   }
 }
