remove console logs

--- a/task-1/env.example
+++ b/task-1/env.example
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/bjak
+MONGO_URI=mongodb://localhost:27017/bjak_policies
+MONGO_TEST_URI=mongodb://localhost:27017/bjak_policies_test
